# ToneTimerNative

./: CMakeLists.txt  ToneTimer-djini-build.sh  ToneTimer.djinni  circles.html  clockTest.cpp
android/: local.properties
android/app/: build.gradle
app/: Intervals-djini-build.sh  Intervals.djinni  proguard-rules.pro
generated-src/cpp/: config.hpp  helloViewModel.hpp  helloWorld.hpp  settingsView.hpp  settingsViewModel.hpp  timerView.hpp  timerViewModel.hpp
generated-src/jni/: NativeConfig.cpp  NativeConfig.hpp  NativeHelloViewModel.cpp  NativeHelloViewModel.hpp  NativeHelloWorld.cpp  NativeHelloWorld.hpp  NativeSettingsView.cpp  NativeSettingsView.hpp  NativeSettingsViewModel.cpp  NativeSettingsViewModel.hpp  NativeTimerView.cpp  NativeTimerView.hpp  NativeTimerViewModel.cpp  NativeTimerViewModel.hpp
generated-src/objc/: TTConfig+Private.h  TTConfig+Private.mm  TTConfig.h  TTConfig.mm  TTHelloViewModel+Private.h  TTHelloViewModel+Private.mm  TTHelloViewModel.h  TTHelloWorld+Private.h  TTHelloWorld+Private.mm  TTHelloWorld.h  TTSettingsView+Private.h  TTSettingsView+Private.mm  TTSettingsView.h  TTSettingsViewModel+Private.h  TTSettingsViewModel+Private.mm  TTSettingsViewModel.h  TTTimerView+Private.h  TTTimerView+Private.mm  TTTimerView.h  TTTimerViewModel+Private.h  TTTimerViewModel+Private.mm  TTTimerViewModel.h
src/cpp/: Clock.cpp  Clock.h  StateMachine.cpp  StateMachine.h  clockTest.cpp  helloWorldImp.hpp  helloWorldImpl.cpp  helloWorldImpl.hpp  settingsViewModelImpl.cpp  settingsViewModelImpl.h  timerViewModelImpl.cpp  timerViewModelImpl.h
(+25 files in other folders)
